Final signatures