@@ -16,6 +16,10 @@ repositories {
 javafx {
     version = "14"
     modules("javafx.controls", "javafx.fxml", "javafx.swing")
+    sdk = System.getenv("JAVAFX_HOME")
+    if (sdk == null || sdk.isBlank()) {
+        throw InvalidUserDataException("JAVAFX_HOME environment variable is not set. It must be set to root folder where JAVAFX SDK is located")
+    }
 }
 
 dependencies {
@@ -37,4 +41,10 @@ dependencies {
 
 application {
     mainClassName = "net.decodex.invoice.App"
+    applicationName = "invoice"
+    val javafxHome = System.getenv("JAVAFX_HOME")
+    applicationDefaultJvmArgs = listOf(
+        "--module-path=${javafxHome}${File.separator}lib",
+        "--add-modules=javafx.controls,javafx.swing,javafx.fxml"
+    )
 }
